# adrian.garrote-i.lopez2-P2

./: CMakeLists.txt  README.md  func_col_mpi.c  func_col_mpi.h  pi  pi.c  programa
